adjust sizing of text and links to prevent wrapping on mobile

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,9 +1,7 @@
 .contact {
    display: flex;
-   flex-wrap: wrap;
    flex-direction: column;
-   justify-content: flex-end;
    height: 100%;
-   padding: .25rem;
-   gap: .375rem;
+   padding: .125 rem;
+   gap: .25rem;
 }
